<resources>
    <string name="app_name">E Wybory</string>
    <string name="welcome_text">Witaj w aplikacji E-Wybory</string>
    <string name="choose_auth_method_text">Wybierz metode uwierzytelnienia</string>
    <string name="choose_auth_edo_text">E-dowód</string>
    <string name="choose_auth_passport_text">Paszport</string>
    <string name="edo_nfc_started">Rozpoczęto komunikacje NFC</string>
    <string name="edo_nfc_pace_started">Rozpoczęto uwierzytelnienie PACE</string>
    <string name="edo_nfc_dg1_started">Uwierzytelnienie pomyślne, pobieranie danych</string>
    <string name="edo_nfc_dg2_started">Pobieranie zdjęcia</string>
    <string name="passport_nfc_bac_started">Rozpoczynam uwierzytelnienie BAC, po nieudanej próbie PACE</string>
    <string name="edo_nfc_error_pace">Błąd podczas uwierzytelnienia PACE, kończę proces</string>
    <string name="edo_nfc_error_bac">Błąd podczas uwierzytelnienia BAC, kończę proces</string>
    <string name="result_first_name_label">Imię:</string>
    <string name="result_last_name_label">Nazwisko:</string>
    <string name="result_nationality_label">Narodowość:</string>
    <string name="result_gender_label">Płeć:</string>
    <string name="result_personal_number_label">PESEL:</string>
    <string name="result_birth_date_label">Data urodzenia:</string>
    <string name="intent_first_name">FirstName</string>
    <string name="intent_last_name">LastName</string>
    <string name="intent_nationality">Nationality</string>
    <string name="intent_gender">Gender</string>
    <string name="intent_personal_number">PersonalNumber</string>
    <string name="intent_birth_date">BirthDate</string>
    <string name="result_empty_data_text">Brak danych</string>
    <string name="edo_document_number_label">Numer dowodu</string>
    <string name="passport_document_number_label">Numer dokumentu</string>
    <string name="edo_date_of_birth_label">Data urodzenia (YYMMDD)</string>
    <string name="edo_expiration_date_label">Data ważności dokumentu (YYMMDD)</string>
    <string name="edo_download_complete_toast">Możesz odłożyć e-Dowód</string>
    <string name="title_activity_edo_app_auth_tabed">EdoAppAuthTabedActivity</string>
    <string name="edo_tab_data">Informacje z dokumentu</string>
    <string name="edo_tab_can">CAN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edo_can_label">Wprowadź CAN</string>
    <string name="error_not_enough_data_for_authentication">Brak danych niezbędnych do odczytu E-dowodu</string>
    <string name="intent_photo">Photo</string>
    <string name="light_theme_menu_option">Jasny</string>
    <string name="night_theme_menu_option">Ciemny</string>
    <string name="system_default_theme_menu_option">Systemowy</string>
    <string name="enter_data_and_touch_nfc_with_eid">Wprowadź dane i przyłóż e-dowód do czytnika NFC</string>
    <string name="enter_data_and_touch_nfc_with_epassport">Wprowadź dane i przyłóż paszport do czytnika NFC</string>
</resources>